[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
uuid = { version = "1", features = ["serde", "v4"] }
anyhow = "1"